--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "global-logistics-integration-platform",
-  "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "prettier": "^3.5.0",
-    "turbo": "^2.4.1",
-    "typescript": "5.7.3"
-  },
-  "packageManager": "pnpm@9.0.0",
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "global-logistics-integration-platform",
+    "private": true,
+    "scripts": {
+        "build": "turbo build",
+        "dev": "turbo dev",
+        "lint": "turbo lint",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "compose:db": "dotenv -e .env -- docker-compose -f docker-compose.yml up -d",
+        "compose:db:down": "dotenv -e .env -- docker-compose -f docker-compose.yml down",
+    },
+    "devDependencies": {
+        "prettier": "^3.5.0",
+        "turbo": "^2.4.1",
+        "typescript": "5.7.3"
+    },
+    "packageManager": "pnpm@9.0.0",
+    "engines": {
+        "node": ">=18"
+    },
+    "dependencies": {
+        "dotenv-cli": "^8.0.0"
+    }
 }
