--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,29 @@ services:
       - ./data/shipment_postgres:/var/lib/postgresql/data
     restart: unless-stopped
 
+  inventory_registry_etcd:
+    image: bitnami/etcd:3.5.17
+    container_name: inventory_registry_etcd
+    ports:
+      - "${REGISTRY_ETCD_PORT:-2379}:2379"
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=${REGISTRY_ETCD_ALLOW_NONE_AUTHENTICATION:-no}
+      - ETCD_ROOT_PASSWORD=${REGISTRY_ETCD_ROOT_PASSWORD}
+      - ETCD_ADVERTISE_CLIENT_URLS=http://0.0.0.0:${REGISTRY_ETCD_PORT:-2379}
+      - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:${REGISTRY_ETCD_PORT:-2379}
+      - ETCD_CERT_FILE=/certs/cert.pem
+      - ETCD_KEY_FILE=/certs/key.pem
+      - ETCD_TRUSTED_CA_FILE=/certs/ca.pem
+      - ETCD_CLIENT_CERT_AUTH=${REGISTRY_ETCD_CLIENT_CERT_AUTH:-true}
+    volumes:
+      - inventory_registry_etcd:/bitnami/etcd
+      - ./certs:/certs
+    restart: always
+
 volumes:
   inventory_postgres_data:
     name: inventory_postgres_data
   shipment_postgres_data:
     name: shipment_postgres_data
+  inventory_registry_etcd:
+    driver: local
