--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "dev": "turbo dev",
         "lint": "turbo lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "compose:db": "dotenv -e .env -- docker-compose -f docker-compose.yml up -d",
-        "compose:db:down": "dotenv -e .env -- docker-compose -f docker-compose.yml down",
+        "compose": "dotenv -e .env -- docker-compose -f docker-compose.yml up -d",
+        "compose:down": "dotenv -e .env -- docker-compose -f docker-compose.yml down"
     },
     "devDependencies": {
         "prettier": "^3.5.0",
