migrate registry api out from shipment api

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,41 @@
-# Inventory PostgreSQL Configuration
-INVENTORY_PG_HOST=localhost
-INVENTORY_PG_PORT=5432
-INVENTORY_PG_USER=root
-INVENTORY_PG_PASSWORD=toor
-INVENTORY_PG_DB=inventory
-INVENTORY_PG_URL=postgresql://${INVENTORY_PG_USER}:${INVENTORY_PG_PASSWORD}@${INVENTORY_PG_HOST}:${INVENTORY_PG_PORT}/${INVENTORY_PG_DB}
+# Shipment Auth Configuration
+SHIPMENT_ENDPOINT=127.0.0.1
+SHIPMENT_PORT=3001
+SHIPMENT_REGISTRY_API_KEY=secret
+SHIPMENT_AUTH_JWT_SECRET=1234
+SHIPMENT_AUTH_JWT_EXPIRATION_TIME=86400
+SHIPMENT_AUTH_JWT_ADMIN_API_SECRET=secret
 
 # Shipment PostgreSQL Configuration
 SHIPMENT_PG_HOST=localhost
 SHIPMENT_PG_PORT=5433
 SHIPMENT_PG_USER=root
 SHIPMENT_PG_PASSWORD=toor
-SHIPMENT_PG_DB=shipment
-SHIPMENT_PG_URL=postgresql://${SHIPMENT_PG_USER}:${SHIPMENT_PG_PASSWORD}@${SHIPMENT_PG_HOST}:${SHIPMENT_PG_PORT}/${SHIPMENT_PG_DB} 
+SHIPMENT_PG_DB_NAME=shipment
+SHIPMENT_PG_URL=postgresql://${SHIPMENT_PG_USER}:${SHIPMENT_PG_PASSWORD}@${SHIPMENT_PG_HOST}:${SHIPMENT_PG_PORT}/${SHIPMENT_PG_DB_NAME} 
+
+# Inventory PostgreSQL Configuration
+INVENTORY_PG_HOST=localhost
+INVENTORY_PG_PORT=5432
+INVENTORY_PG_USER=root
+INVENTORY_PG_PASSWORD=toor
+INVENTORY_PG_DB_NAME=inventory
+INVENTORY_PG_URL=postgresel://${INVENTORY_PG_USER}:${INVENTORY_PG_PASSWORD}@${INVENTORY_PG_HOST}:${INVENTORY_PG_PORT}/${INVENTORY_PG_DB_NAME}
+
+# Inventory Registry API Configuration
+INVENTORY_REGISTRY_ENDPOINT=127.0.0.1
+INVENTORY_REGISTRY_PORT=3002
+INVENTORY_REGISTRY_AUTH_API_SECRET_KEY=secret
+
+INVENTORY_REGISTRY_PG_HOST=localhost
+INVENTORY_REGISTRY_PG_PORT=5434
+INVENTORY_REGISTRY_PG_USER=root
+INVENTORY_REGISTRY_PG_PASSWORD=toor
+INVENTORY_REGISTRY_PG_DB_NAME=registry
+INVENTORY_REGISTRY_PG_URL=postgresql://${REGISTRY_PG_USER}:${REGISTRY_PG_PASSWORD}@${REGISTRY_PG_HOST}:${REGISTRY_PG_PORT}/${REGISTRY_PG_DB}
+
+# Inventory Registry Etcd Configuration
+REGISTRY_ETCD_ENDPOINT=127.0.0.1
+REGISTRY_ETCD_USERNAME=root
+REGISTRY_ETCD_ROOT_PASSWORD=toor
+REGISTRY_ETCD_PORT=2379
