--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
         "lint": "turbo lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "compose": "dotenv -e .env -- docker-compose -f docker-compose.yml up -d",
-        "compose:down": "dotenv -e .env -- docker-compose -f docker-compose.yml down"
+        "compose:down": "dotenv -e .env -- docker-compose -f docker-compose.yml down",
+        "db:migrate": "turbo db:migrate",
+        "db:studio": "turbo db:studio",
+        "db:generate": "turbo db:generate"
     },
     "devDependencies": {
         "prettier": "^3.5.0",
         "turbo": "^2.4.1",
-        "typescript": "5.7.3"
+        "typescript": "5.7.3",
+        "@types/bun": "latest"
     },
     "packageManager": "pnpm@9.0.0",
     "engines": {
@@ -20,5 +24,7 @@
     },
     "dependencies": {
         "dotenv-cli": "^8.0.0"
-    }
+    },
+    "module": "index.ts",
+    "type": "module"
 }
