fix: .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ SHIPMENT_AUTH_JWT_SECRET=1234
 SHIPMENT_AUTH_JWT_EXPIRATION_TIME=86400
 SHIPMENT_AUTH_JWT_ADMIN_API_SECRET=secret
 
+# Shipment RabbitMQ Configuration
+SHIPMENT_RABBITMQ_DEFAULT_USER=admin
+SHIPMENT_RABBITMQ_DEFAULT_PASS=admin
+SHIPMENT_RABBITMQ_DEFAULT_HOST=localhost
+SHIPMENT_RABBITMQ_DEFAULT_PORT=5672
+SHIPMENT_RABBITMQ_DEFAULT_VHOST=/
+
 # Shipment PostgreSQL Configuration
 SHIPMENT_PG_HOST=localhost
 SHIPMENT_PG_PORT=5433
