--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,14 @@
 		"activityBarBadge.foreground": "#262626",
 		"statusBar.background": "#262626",
 		"statusBar.foreground": "#e9dbb7"
-	}
+	},
+	"files.readonlyInclude": {
+      "**/routeTree.gen.ts": true
+    },
+    "files.watcherExclude": {
+      "**/routeTree.gen.ts": true
+    },
+    "search.exclude": {
+        "**/routeTree.gen.ts": true
+    }
 }
