feat: add .env.example file and update README for setup instructions; enhance inventory model with warehouse_id and adjust related services

--- a/apps/inventory/.env.example
+++ b/apps/inventory/.env.example
@@ -1,3 +1,20 @@
-DATABASE_URL=postgres://mdd_inventory:password@inventory_postgres:5432/public
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=mdd_inventory
+PG_PASSWORD=password
+PG_DB_NAME=public
+PG_URL=postgres://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DB_NAME}
+
+DB_URL=postgres://mdd_inventory:password@localhost:5432/public
+
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
+RABBITMQ_DEFAULT_HOST=localhost
+RABBITMQ_DEFAULT_PORT=5672
+RABBITMQ_DEFAULT_VHOST=/
+RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@${RABBITMQ_DEFAULT_HOST}:${RABBITMQ_DEFAULT_PORT}/${RABBITMQ_DEFAULT_VHOST}
+
 SECRET_KEY=inv-secret-1
 JWT_SECRET=secret
+
+INVENTORY_REGION=USA1
