--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ REGISTRY_ETCD_ENDPOINT=127.0.0.1
 REGISTRY_ETCD_USERNAME=root
 REGISTRY_ETCD_ROOT_PASSWORD=toor
 REGISTRY_ETCD_PORT=2379
+
+# Shipment Web Configuration
+VITE_SHIPMENT_API_URL=http://localhost:3001
