--- a/apps/registry-web/package.json
+++ b/apps/registry-web/package.json
@@ -11,20 +11,39 @@
     },
     "dependencies": {
         "@generouted/react-router": "^1.20.0",
+        "@hookform/resolvers": "^4.1.3",
+        "@radix-ui/react-checkbox": "^1.1.4",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.2",
         "@tailwindcss/vite": "^4.0.17",
         "@tanstack/react-query": "^5.69.0",
         "axios": "^1.8.4",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.484.0",
+        "motion": "^12.6.2",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.2",
         "react-router": "^7.4.0",
         "react-use-localstorage": "^3.5.3",
-        "tailwindcss": "^4.0.17"
+        "sonner": "^2.0.2",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.17",
+        "tw-animate-css": "^1.2.5",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@types/node": "^22.13.14",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "core": "workspace:*",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
