--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,4 @@ REGISTRY_ETCD_PORT=2379
 
 # Shipment Web Configuration
 VITE_SHIPMENT_API_URL=http://localhost:3001
+VITE_REGISTRY_API_URL=http://localhost:3002
