--- a/apps/registry-web/package.json
+++ b/apps/registry-web/package.json
@@ -4,10 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
+        "dev": "dotenv -e ../../.env -- vite",
+        "build": "dotenv -e ../../.env -- tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "dotenv -e ../../.env -- vite preview"
     },
     "dependencies": {
         "@generouted/react-router": "^1.20.0",
